gccida/g0/noce_try_minmax
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/ifcvt.c:1761:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code op; // [rsp+38h] [rbp-8h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/ifcvt.c:1762:1: error: must use 'enum' tag to refer to type 'rtx_code'
rtx_code code; // [rsp+3Ch] [rbp-4h] 
^
enum 
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/ifcvt.c:1766:8: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
if ( ( mode_class_0[*( ( unsigned __int8 *)if_info->x + 2)] == MODE_FLOAT 
       ^~~~~~~~~~~~
       mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/ifcvt.c:1767:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)if_info->x + 2)] == MODE_COMPLEX_FLOAT 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/ifcvt.c:1768:4: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
|| mode_class_0[*( ( unsigned __int8 *)if_info->x + 2)] == MODE_VECTOR_FLOAT) 
   ^~~~~~~~~~~~
   mode_class
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/ifcvt.c:1796:2: error: expected expression
 struct op = SMIN; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/ifcvt.c:1803:2: error: expected expression
 struct op = SMAX; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/ifcvt.c:1808:2: error: expected expression
 struct op = UMIN; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/ifcvt.c:1813:2: error: expected expression
 struct op = UMAX; 
 ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/ifcvt.c:1818:3: error: use of undeclared identifier 'machine_mode'
( machine_mode)*( ( unsigned __int8 *)if_info->x + 2), 
  ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/noce_try_minmax/src/obj/ifcvt.o] Error 1
